packages/meta/src/test/__tests__/language-tests/faultyDefFiles/syntax-errors/test8.lang
language XXXX

concept RRRR base WWWW, YYYY {
}
